--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
     <h3><a href="./public/birthday-invite.html">My Birthday Invite Project</a></h3>
     <img src="./assets/images/birthday-invite.png" alt="Birthday Invite Project Preview" height="200">
     <hr />
-    <a href="./public/contact-me.html">Contact Me</a>
-    <a href="./public/about-me.html">About Me</a>
+    <a href="./public/contact.html">Contact Me</a>
+    <a href="./public/about.html">About Me</a>
 </body>
 </html>
